# tron-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  instances.py  main.py  models.py  schemas.py
app/endpoints/: addresses.py
docker/: .dockerignore  app.Dockerfile  compose.yml  entrypoint.sh
tests/: test_integration.py  test_unit.py
